# zania-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: lints.yml  type-check.yml
data/: document.json  questions.json
src/: __main__.py
src/zania_backend/: __init__.py
src/zania_backend/core/: __init__.py
src/zania_backend/core/config/: __init__.py  base.py  hypercorn_config.py  open_api_config.py  security.py  servers.py
src/zania_backend/core/errors/: messages.py
src/zania_backend/core/schema/: api_response.py  base_schema.py
src/zania_backend/core/utils/: case_converter.py  enums.py  helper.py  logging.py
src/zania_backend/middlewares/: __init__.py  logging_middleware.py
src/zania_backend/repository/: __init__.py  service_repo.py
src/zania_backend/services/: langchain_service.py
src/zania_backend/static/docs/: scalar.js
src/zania_backend/web/: __init__.py  application.py  granian_app.py  hypercorn_app.py
src/zania_backend/web/api/: router.py
src/zania_backend/web/api/docs/: __init__.py  views.py
src/zania_backend/web/api/llm/: __init__.py  controller.py  schema.py  views.py
src/zania_backend/web/api/montior/: __init__.py  views.py
